@@ -685,3 +685,5 @@
 - Removed aClient->history, not used (saves 4 bytes for every user/server)
 - Fixed compile error with SSL
 - Fixed a /list and /quit bug
+- Fixed the masskill bug with replacing "Server Exists" code.. i removed it
+  accidentialy last time
